harbor/harbor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: harbor
  annotations:
    kubernetes.io/ingress.class: lslbd
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  rules:
  - host: 'harbor.thetamilselvan.in'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: harbor-portal
            port:
              number: 80
  tls:
  - hosts:
    - '*.thetamilselvan.in'
    secretName: harbor-tls
